# gan_learning

./: .gitignore  GAN_4198.6636476desc  GAN_4198.6636476gen  README.md  pyproject.toml  resources.txt
gan/: mapimg.py  playground.py  trainer.py
gan/fashion/: trainer.py
gan/mapenlarge/: mapimg.py  models.py  trainer.py
gan/mapmaker/: mapimg.py  models.py  playground.py  trainer.py
gan/maps/: mapimg.py
test/mapenlarge/: test_mapimg.py  test_models.py
test/mapmaker/: test_mapimg.py  test_models.py
test/tests/mapmaker/: test_mapimg.py  test_models.py
tests/: test_gan.py
