[tool.poetry]
name = "gan"
version = "0.1.0"
description = "Learning some GANs"
authors = ["Evin O'Shea evinoshea@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "==1.4.4"
argon2-cffi = "==20.1.0"
async-generator = "==1.10"
attrs = "==20.3.0"
backcall = "==0.2.0"
black = "==20.8b1"
bleach = "==3.3.0"
CacheControl = "==0.12.6"
cachy = "==0.3.0"
certifi = "==2020.12.5"
cffi = "==1.14.5"
chardet = "==4.0.0"
cleo = "==0.8.1"
click = "==7.1.2"
clikit = "==0.6.2"
colorama = "==0.4.4"
crashtest = "==0.3.1"
cycler = "==0.10.0"
decorator = "==4.4.2"
defusedxml = "==0.7.1"
distlib = "==0.3.1"
entrypoints = "==0.3"
filelock = "==3.0.12"
html5lib = "==1.1"
idna = "==2.10"
ipykernel = "==5.5.0"
ipython = "==7.21.0"
ipython-genutils = "==0.2.0"
ipywidgets = "==7.6.3"
jedi = "==0.18.0"
Jinja2 = "==2.11.3"
jsonschema = "==3.2.0"
jupyter = "==1.0.0"
jupyter-client = "==6.1.12"
jupyter-console = "==6.3.0"
jupyter-core = "==4.7.1"
jupyterlab-pygments = "==0.1.2"
jupyterlab-widgets = "==1.0.0"
keyring = "==21.8.0"
kiwisolver = "==1.3.1"
llvmlite = "==0.36.0"
lockfile = "==0.12.2"
MarkupSafe = "==1.1.1"
matplotlib = "==3.3.4"
mistune = "==0.8.4"
msgpack = "==1.0.2"
mypy-extensions = "==0.4.3"
nbclient = "==0.5.3"
nbconvert = "==6.0.7"
nbformat = "==5.1.2"
nest-asyncio = "==1.5.1"
notebook = "==6.2.0"
numba = "==0.53.0"
numpy = "==1.20.1"
packaging = "==20.9"
pandocfilters = "==1.4.3"
parso = "==0.8.1"
pastel = "==0.2.1"
pathspec = "==0.8.1"
pexpect = "==4.8.0"
pickleshare = "==0.7.5"
Pillow = "==8.1.2"
pkginfo = "==1.7.0"
poetry = "==1.1.5"
poetry-core = "==1.0.2"
prometheus-client = "==0.9.0"
prompt-toolkit = "==3.0.17"
ptyprocess = "==0.7.0"
pycparser = "==2.20"
Pygments = "==2.8.1"
pylev = "==1.3.0"
pyparsing = "==2.4.7"
pyrsistent = "==0.17.3"
python-dateutil = "==2.8.1"
pywin32 = "==300"
pywin32-ctypes = "==0.2.0"
pywinpty = "==0.5.7"
pyzmq = "==22.0.3"
qtconsole = "==5.0.3"
QtPy = "==1.9.0"
regex = "==2021.3.17"
requests = "==2.25.1"
requests-toolbelt = "==0.9.1"
scikit-image = "==0.18.1"
Send2Trash = "==1.5.0"
shellingham = "==1.4.0"
six = "==1.15.0"
terminado = "==0.9.3"
testpath = "==0.4.4"
toml = "==0.10.2"
tomlkit = "==0.7.0"
torch = "==1.8.0+cu111"
torchaudio = "==0.8.0"
torchvision = "==0.9.0+cu111"
tornado = "==6.1"
traitlets = "==5.0.5"
typed-ast = "==1.4.2"
typing-extensions = "==3.7.4.3"
urllib3 = "==1.26.4"
virtualenv = "==20.4.3"
wcwidth = "==0.2.5"
webencodings = "==0.5.1"
widgetsnbextension = "==3.5.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
